--- a/apps/memory/src/index.html
+++ b/apps/memory/src/index.html
@@ -20,6 +20,9 @@
                             <h4 class="text-white">Contact</h4>
                             <ul class="list-unstyled">
                                 <li>
+                                    <a href="https://github.com/jwright04/paymemory" target="_blank" class="text-white">View this on github</a>
+                                </li>
+                                <li>
                                     <a href="https://jamescwright.com" target="_blank" class="text-white">https://jamescwright.com</a>
                                 </li>
                               <li>
